--- a/SITE WEB grp5/login.html
+++ b/SITE WEB grp5/login.html
@@ -147,18 +147,26 @@
               Nous contacter
             </h4>
             <div class="contact_link_box">
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  05 23 45 67 89
-                </span>
-              </a>
-              <a href="">
+              <p>
+                <a href="">
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                  <span>
+                    05 23 45 67 89
+                  </span>
+                </a>
+              </p>
+            
+              <p>
+                <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   n-eat@neat.com
                 </span>
-              </a>
+                </a>
+              </p>
+              <p>
+                10h00 - 22h00
+              </p>
             </div>
           </div>
         </div>
@@ -191,22 +199,16 @@
         </div>
         <div class="col-md-4 footer-col">
           <h4>
-            Horaires d'ouvertures
+            Nos locaux
           </h4>
-          <p>
-            Tous les jours
-          </p>
-          <p>
-            10h00 - 22h00
-          </p>
+          <p>Adresse : 2 Rue du Doyen Gabriel Marty,</p>
+          <p>31000 Toulouse</p>
         </div>
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> Tous droits réservés par
-          <a href="https://html.design/">Modèles HTML gratuits</a><br><br>
-          &copy; <span id="displayYear"></span> Distribué par
-          <a href="https://themewagon.com/" target="_blank">ThèmeWagon</a>
+          &copy; <span id="displayYear"></span> Tous droits réservés par Modèles HTML gratuits<br><br>
+          &copy; <span id="displayYear"></span> Distribué par ThèmeWagon
         </p>
       </div>
     </div>
